Bug 151160 - Mouse scroll does not work in the textedit area
Summary: Mouse scroll does not work in the textedit area
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-21 23:34 UTC by András Manţia
Modified: 2007-11-12 15:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2007-10-21 23:34:05 UTC
Version:           3.94.1 (using KDE Devel)
OS:                Linux

If while scrolling with the wheel, the mouse pointer is over a textedit area, scrolling of the page stops. That's OK, but the problem is that if the textarea has a scrollbar, the scrolling doesn't scroll it. That's not OK anymore.
Comment 1 Germain Garand 2007-10-26 02:18:42 UTC
mmh the BUG: post commit thing didn't work but I more or less fixed this bug

(well, I'm happy it wasn't closed because apparently I now forward too many wheel events to the widgets. Should not do that unless the mouse pointer is above.)
Comment 2 Germain Garand 2007-11-12 15:08:47 UTC
WebSVN link: http://websvn.kde.org/?view=rev&revision=731870
WebSVN link: http://websvn.kde.org/?view=rev&revision=729135