- fix widget event handling, then - enable redirection of iframes so we get correct z-order - propagate wheel event to widgets (151160)

yeah, I know it's late, I've spend the damn night on that thing.
Nevertheless, it's important.
Besides, its time to realize the king is naked!
Give us another beta!

BUG:151160

svn path=/trunk/KDE/kdelibs/; revision=729135