khtml/html/html_objectimpl.cpp
@@ -99,6 +99,35 @@ void HTMLObjectBaseElementImpl::parseAttribute(AttributeImpl *attr)
     }
 }
 
+
+void HTMLObjectBaseElementImpl::defaultEventHandler(EventImpl *e)
+{
+    // ### duplicated in HTMLIFrameElementImpl
+     if ( e->target() == this && m_render && m_render->isWidget() 
+                                    && static_cast<RenderWidget*>(m_render)->isRedirectedWidget() 
+                                    && qobject_cast<KHTMLView*>(static_cast<RenderWidget*>(m_render)->widget())) {
+        switch(e->id())  {
+        case EventImpl::MOUSEDOWN_EVENT:
+        case EventImpl::MOUSEUP_EVENT:
+        case EventImpl::MOUSEMOVE_EVENT:
+        case EventImpl::MOUSEOUT_EVENT:
+        case EventImpl::MOUSEOVER_EVENT:
+        case EventImpl::KHTML_MOUSEWHEEL_EVENT:
+        case EventImpl::KEYDOWN_EVENT:
+        case EventImpl::KEYUP_EVENT:
+        case EventImpl::KEYPRESS_EVENT:
+        case EventImpl::DOMFOCUSIN_EVENT:
+        case EventImpl::DOMFOCUSOUT_EVENT:
+            if (static_cast<RenderWidget*>(m_render)->handleEvent(*e))
+                e->setDefaultHandled();
+        default:
+            break;
+        }
+    }
+    HTMLElementImpl::defaultEventHandler(e);
+}
+
+
 void HTMLObjectBaseElementImpl::removedFromDocument()
 {
     getDocument()->underDocNamedCache().remove(m_name.string(), this);
